# pi-cluster-two

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
backplane_1slot/: backplane.brd  backplane.sch
backplane_3slot/: backplane.brd  backplane.sch
bramble/: Makefile.am  configure.ac
bramble/etc/: bramble.dev
bramble/src/cmd/: bramble.c  canping.c  cansnoop.c  console.c  firmware-version.c  led.c  power.c  slot.c  usage_bargraph.c  version.c
bramble/src/libbramble/: bramble.h  canlinux.c  canlinux.h  canmsg.h  canmsg_v1.c  canmsg_v1.h  canmsg_v2.c  canmsg_v2.h  canobj.c  canobj.h  i2clinux.c  i2clinux.h  i2cproto.h  nvram.c  nvram.h  temp.c  utils.c  utils.h  version.h.in
debian/: control  copyright  rules
doc/: CAN.md
dts/: Makefile  address.dts  shutdown.dts
etc/: bramble.dev  (+1 more)
firmware/: Makefile  Makefile.am  Makefile.incl  README.md  configure.ac
firmware/libwwg/: miniprintf.c  opencm3.c
firmware/scripts/: bramble-fw-update
firmware/src/: FreeRTOSConfig.h  Makefile  address.c  address.h  blink.c  blink.h  canbus.c  canbus.h  canmsg.h  canmsg_v1.c  canmsg_v1.h  canservices.c  canservices.h  font5x7.h  i2c.c  i2c.h  main.c  matrix.c  matrix.h  openocd_pi.cfg  openocd_stlink.cfg  power.c  power.h  rtc.c  rtc.h  serial.c  serial.h  trace.c  trace.h
hardware/: Makefile.am  configure.ac
hardware/40pin-adapter/: 40pin-adapter-cache.lib  40pin-adapter.kicad_pcb  40pin-adapter.pro  40pin-adapter.sch  fp-info-cache  fp-lib-table
hardware/40pin-adapter/3d/: HLE-120-02-F-DV-BE.stp
hardware/40pin-adapter/lib.pretty/: Samtec_HLE-120-02-xxx-DV-BE-A_2x20_P2.54mm_Horizontal.kicad_mod
hardware/blank_panel_4hp/: README.md  frontpanel_3u_4hp_holes.kicad_pcb  frontpanel_3u_4hp_holes.kicad_pro
hardware/bus-3/: bus-3-cache.lib  bus-3.kicad_pcb  bus-3.net  bus-3.pro  bus-3.sch  sym-lib-table
hardware/bus-3/project_components/: project_components.dcm  project_components.lib
hardware/bus-8/: README.md  bus-8.kicad_pcb  bus-8.pro  bus-8.sch  fp-lib-table
hardware/bus-8/3d/: 091X514X914_100081388MOD000B.STP  39281203.stp  s86093968114755V1LFc.stp
hardware/bus-8/lib.pretty/: DIN41612_C_3x32_Female_Vertical_THT.kicad_mod  IDC-Header_2x07_P2.54mm_Latch6.5mm_Vertical.kicad_mod  Molex_Mini-Fit_Jr_5566-20A_2x10_P4.20mm_Vertical.kicad_mod
hardware/cm4-compute/: cm4-compute.kicad_pcb  cm4-compute.lib  cm4-compute.pro  cm4-compute.sch  cm4_gpio.sch  cm4_highspeed.sch  fp-lib-table  ngff.sch  sym-lib-table
hardware/cm4-compute/3d/: c-1-2199119-5-c-3d.stp
hardware/cm4-compute/lib.pretty/: Conn_TE-M.2-0.5-67P-doublesided.kicad_mod  rpiCM4.kicad_mod
hardware/eurocard/: eurocard.pro  eurocard.sch
hardware/eurocard/project_components/: eurocard.lib
hardware/kludge/: kludge.kicad_pcb  kludge.kicad_pro
hardware/kludge/lib.pretty/: pingrid1x1_2.54.kicad_mod  pingrid2x3_2.54.kicad_mod
hardware/kludge_panel_4hp/: README.md  frontpanel_3u_4hp_holes.kicad_pcb
hardware/pi-carrier/: Makefile.am  README.md  efuse.kicad_sch  eurocard.kicad_pcb  eurocard.kicad_pro  eurocard.kicad_sch  eurocard.pro  eurocard.sch  fp-info-cache  fp-lib-table  m2.kicad_sch  matrix.kicad_sch  ornet.kicad_sch  pi_can.kicad_sch  sym-lib-table
hardware/pi-carrier/3d/: 86093967113h55elf.stp  934EB.STEP  BM02B-SRSS-TB.STEP  BM03B-SRSS-TB.STEP  F31W-1A7H1-11016.STEP  TX07.STEP  bracket_pi.step  dil_socket_299-87-312-10-001101.stp  faceplate_pi4.step  pi5_adapter.step  pi5_panel_4hp.step
hardware/pi-carrier/lib/: 00_eurocard.dcm  00_eurocard.kicad_sym  00_eurocard.lib
hardware/pi-carrier/lib.pretty/: CONN_F31W-1A7H1-11016_AMP.kicad_mod  Conn_TE-M.2-0.5-67P-doublesided_TypeM.kicad_mod  DIN41612_B_3x32_Horizontal.kicad_mod  DIN41612_C_3x32_Male_Horizontal_THT.kicad_mod  DIP-12_W7.62mm_right_angle.kicad_mod  FPC16.kicad_mod  JST_SH_BM02B-SRSS-TB_1x02-1MP_P1.00mm_Vertical.kicad_mod  JST_SH_BM03B-SRSS-TB_1x03-1MP_P1.00mm_Vertical.kicad_mod  LED_Dual_RG_discrete.kicad_mod  Rasp_pi4_mounted.kicad_mod  Rasp_pi_hat_socket.kicad_mod  SOT-753.kicad_mod  VREG_LM5017MR_NOPB.kicad_mod  faceplate_pi4.kicad_mod  worlickwerx_logo.kicad_mod  worlickwerx_text.kicad_mod
hardware/pi-carrier/project_components/: eurocard.dcm  eurocard.lib
hardware/pi-carrier/project_footprints.pretty/: LED_Dual_RG_discrete.kicad_mod  protopad.kicad_mod
hardware/pi-power/: pi-power.kicad_pcb  pi-power.pro  pi-power.sch
hardware/pi-power-proto/: sym-lib-table
hardware/pi-power-proto/project_components/: pi-power.dcm  pi-power.lib
hardware/pi3_carrier_panel_4hp/: frontpanel_3u_4hp_holes.kicad_pcb
hardware/pi4_panel_4hp/: frontpanel_3u_4hp_holes.kicad_pro
hardware/pi4_panel_4hp/lib.pretty/: piface.kicad_mod
hardware/pi5_adapter/: Makefile.am  pi5_adapter.kicad_pcb  pi5_adapter.kicad_pro  pi5_adapter.kicad_sch  sym-lib-table
hardware/pi5_adapter/lib/: 00_eurocard.kicad_sym
hardware/pi5_adapter/lib.pretty/: PinSocket_1x05_P2.54mm_Vertical.kicad_mod
hardware/pi5_panel_4hp/: panel.kicad_pcb  panel.kicad_pro
hardware/pi5_panel_4hp/Library.pretty/: pi5face.kicad_mod
hardware/power48v/: power48v.kicad_pcb
hardware/prints/bracket_pi/: bracket_pi.FCStd  bracket_pi.stl
hardware/prints/dodec_bracket/: dodec_bracket.FCStd  dodec_bracket.stl
hardware/prints/dodec_bracket_end/: dodec_bracket_end.FCStd  dodec_bracket_end.stl
hardware/prints/faceplate_blank/: faceplate_blank.FCStd  faceplate_blank.stl
hardware/prints/faceplate_pi4/: faceplate_pi4.FCStd  faceplate_pi4.stl
hardware/prints/faceplate_supervisor/: faceplate_supervisor.FCStd  faceplate_supervisor.stl
hardware/prints/handle/: handle.FCStd  handle.stl
hardware/scripts/: plot.sh  plot_jlc4.sh  run_drc.sh  run_erc.sh
hardware/supervisor/: 00_supervisor.dcm  00_supervisor.lib  README.md  supervisor.kicad_pcb  supervisor.pro  supervisor.sch  sym-lib-table
hardware/supervisor/3d/: 091X514X913_100081312MOD000B.STP  54601-906002WPLFc.stp  faceplate_supervisor.step
hardware/supervisor/lib.pretty/: IDC-Header_2x07_P2.54mm_Latch_Horizontal.kicad_mod  RJ12_Amphenol_54601.kicad_mod  faceplate_supervisor.kicad_mod
old/: power.md
(+128 files in other folders)
